@@ -1,3 +1,11 @@
+Fri Nov 10 19:41:38 2000  Darrell Brunsch <brunsch@uci.edu>
+
+        * bin/fuzz.pl:
+
+          Added a check for the @file comments used by doxygen.
+          They must be the same as the actual filename, or doxygen will
+          not pick up the comments for that file.
+
 Fri Nov 10 20:26:01 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
 
 	* ace/Profile_Timer.cpp: Replaced ACE_OS::perror() with
